welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: not found: value reculer
	reculer(); reculer(); reculer(); reculer(); reculer(); 
        ^FlowerPot:22: error: not found: value reculer
	reculer(); reculer(); reculer(); reculer(); reculer(); 
                   ^FlowerPot:22: error: not found: value reculer
	reculer(); reculer(); reculer(); reculer(); reculer(); 
                              ^FlowerPot:22: error: not found: value reculer
	reculer(); reculer(); reculer(); reculer(); reculer(); 
                                         ^FlowerPot:22: error: not found: value reculer
	reculer(); reculer(); reculer(); reculer(); reculer(); 
                                                    ^